	auszulösen.

2007-10-07:

	* messages.sh: xboxmessage verträgt neben Kommas auch keine
	Semikolons, werden nun durch Punkt ersetzt (Danke an macknight)

2008-03-22:

	* config.sh: Neuer Pseudowert "toggle" schaltet zwischen "on" und
	"off" um, z.B. "config forward 1 toggle", um das erste Portforwarding
	im Wechsel an- und auszuschalten

2008-03-28:

	* config.sh: 'config dect' zum An- und Abschalten des DECT-Teils der
	7270 ff.

2008-03-29:

	* reverse: Rückwärtssuche bei Google und DasTelefonbuch angepasst

	callmonitor 1.10.3 veröffentlicht

2008-04-19:

	* Web interface: Kleine Performance-Steigerung

2008-05-04:

	* phonebook: Unterstützung für neue AVM-Telefonbücher (mit mehreren
	Rufnummern pro Eintrag); Dank an wengi

	* Makefile: Umstellung von Mod 'dsmod' auf 'freetz'

2008-05-05:

	callmonitor-1.11 veröffentlicht

2008-05-16:

	* net.sh: Option -m für getmsg: Schutz gegen zu viele Argumente

2008-07-*:

	* Unterstützung von verschiedenen Rückwärtssuche-Anbietern, je nach
	Landesvorwahl; Speicherung in Callers im internationalen Format. Neue
	Rückwärtssuchen für Österreich (telefonbuch.at) und USA (anywho.com)
	als Beispiele.

	* Die Priorität der Telefonbücher kann eingestellt werden (Callers vor
	AVM (Standard) oder umgekehrt).

	* fonbuch.txt: Neues AVM-Telefonbuch wurde manchmal nicht erkannt.

	* getmsg.sh: Bessere Vermeidung von Fehlbedienungen (zu hohe Anzahl an
	Nachrichten für das anzuwendende Template)

2008-08-09:

	* reverse: Neue Konvention für Telefonbucheinträge: Abtrennung der
	Adresse mit Semikolon: "NAME; ADDRESS". Die Adresse ist nun separat in
	*_ADDRESS verfügbar und nicht mehr in *_NAME enthalten. Der ganze
	Telefonbucheintrag befindet sich in *_ENTRY (entspricht dem vorherigen
	*_NAME)
	
	* testlookup: Links eingefügt, um die Rückwärtssuche-Seiten manuell zu
	überprüfen

2008-08-16:

	callmonitor-1.12 zum öffentlichen Testen freigegeben

2008-08-23:

	* reverse_config: Es wurde fälschlicherweise immer der
	Standardanbieter benutzt.